[gd_scene load_steps=6 format=3 uid="uid://b2vb3ehdi8x42"]

[ext_resource type="PackedScene" uid="uid://deche81a76i5" path="res://gui/gui_card.tscn" id="1_nf20q"]
[ext_resource type="Script" path="res://gui/cards/story_gui_card.gd" id="2_pqs5w"]
[ext_resource type="Texture2D" uid="uid://bo4ol0wni6mb6" path="res://resources/textures/gui/story.png" id="2_qdgoc"]
[ext_resource type="AudioStream" uid="uid://d2ssnljcftjpl" path="res://resources/audio/story_next.ogg" id="4_gofkt"]
[ext_resource type="AudioStream" uid="uid://by75rlp8d41ao" path="res://resources/audio/story_done.ogg" id="5_fh1hq"]

[node name="StoryGUICard" instance=ExtResource("1_nf20q")]
script = ExtResource("2_pqs5w")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer" index="0"]
layout_mode = 2
texture = ExtResource("2_qdgoc")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer" index="2" groups=["focus"]]
layout_mode = 2
text = "Continue"

[node name="NextPlayer" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource("4_gofkt")
bus = &"Sound"

[node name="DonePlayer" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource("5_fh1hq")
bus = &"Sound"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
